Fixed Gap

--- a/app/src/Pages/AdminPage.css
+++ b/app/src/Pages/AdminPage.css
@@ -1,3 +1,12 @@
+.admin {
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
+}
+.container {
+  display: flex;
+}
+/*working on gap*/
 .Tabs {
   width: 80%;
   height: auto;
